OpenJUMP 1.4.2 (2011-09-11)